fixed encoding bugs

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <div class="row">
     <div class="col-md-12">
         
-<p>I’m a developer and CS student based in London.</p>
+<p>I'm a developer and CS student based in London.</p>
 
-<p>You can email <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#109;&#101;&#064;&#104;&#111;&#114;&#097;&#099;&#101;&#108;&#105;&#046;&#099;&#111;&#109;">&#109;&#101;&#064;&#104;&#111;&#114;&#097;&#099;&#101;&#108;&#105;&#046;&#099;&#111;&#109;</a>.</p>
+<p>You can email <a href="mailto:me@horaceli.com">me@horaceli.com</a>.</p>
 
 <p><a href="https://dl.dropboxusercontent.com/s/q0z69k3dgljhpu0/CV.docx?dl=1">CV</a></p>
 
