--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>About</title>
     <link href="http://ajax.aspnetcdn.com/ajax/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-    <link href="global/css/main.css" rel="stylesheet">
     <script src="http://ajax.aspnetcdn.com/ajax/bootstrap/3.1.1/bootstrap.min.js"></script>
 </head>
 
@@ -18,7 +17,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Horace Li</a>
+            <a class="navbar-brand" href="/">Horace Li</a>
         </div>
     </div>
 </div>
@@ -35,7 +34,7 @@
         
 <p>I'm a developer and CS student based in London.</p>
 
-<p>You can email <a href="mailto:me@horaceli.com">me@horaceli.com</a>.</p>
+<p><a href="mailto:me@horaceli.com">me@horaceli.com</a></p>
 
 <p><a href="https://dl.dropboxusercontent.com/s/q0z69k3dgljhpu0/CV.docx?dl=1">CV</a></p>
 
