--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="row">
     <div class="col-md-12">
         
-<p>I'm a developer and CS student based in London.</p>
+<p>I'm a developer based in London.</p>
 
 <p><a href="mailto:me@horaceli.com">me@horaceli.com</a></p>
 
