--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <section>
                 <a href="https://www.linkedin.com/in/horacehhli/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
                 <a href="https://github.com/horaceli/"><i class="fa fa-fw fa-2x fa-github"></i></a>
+                <a href="https://instagram.com/apfel912/"><i class="fa fa-fw fa-2x fa-instagram"></i></a>
             </section>
         </aside>
     </div>
