--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <p><a href="mailto:me@horaceli.com">me@horaceli.com</a></p>
 
-<p><a href="https://dl.dropboxusercontent.com/s/q0z69k3dgljhpu0/CV.docx?dl=1">CV</a></p>
+<p><a href="https://www.dropbox.com/s/q0z69k3dgljhpu0/CV.docx?dl=0">CV</a></p>
 
     </div>
 </div>
