--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <a href="https://www.linkedin.com/in/horacehhli/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
                 <a href="https://github.com/horaceli/"><i class="fa fa-fw fa-2x fa-github"></i></a>
                 <a href="https://instagram.com/apfel912/"><i class="fa fa-fw fa-2x fa-instagram"></i></a>
+                <a href="https://twitter.com/horaceli/"><i class="fa fa-fw fa-2x fa-twitter"></i></a>
             </section>
         </aside>
     </div>
