--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         
 <p>I'm a developer based in London.</p>
 
+<p><i>"Always work hard on something uncomfortably exciting."</i> - Larry Page</p>
+
 <p><a href="mailto:me@horaceli.com">me@horaceli.com</a></p>
 
 <p><a href="https://www.dropbox.com/s/q0z69k3dgljhpu0/CV.docx?dl=0">CV</a></p>
