--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p><i>"Always work hard on something uncomfortably exciting."</i> - Larry Page</p>
 
-<p><a href="mailto:me@horaceli.com">me@horaceli.com</a></p>
+<p><a href="mailto:me@horace.li">me@horace.li</a></p>
 
 <p><a href="https://www.dropbox.com/s/q0z69k3dgljhpu0/CV.docx?dl=0">CV</a></p>
 
