--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </main>
         <aside class="col-md-3">         
             <section>
-                <a href="https://www.linkedin.com/in/horacehhli/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/HoraceL/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
                 <a href="https://github.com/horaceli/"><i class="fa fa-fw fa-2x fa-github"></i></a>
                 <a href="https://instagram.com/apfel912/"><i class="fa fa-fw fa-2x fa-instagram"></i></a>
                 <a href="https://twitter.com/horaceli/"><i class="fa fa-fw fa-2x fa-twitter"></i></a>
