--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <div class="row">
     <div class="col-md-12">
         
-<p>I'm a developer based in London.</p>
+<p>I'm a <strike>wannabe magician</strike> developer based in London.</p>
 
-<p><i>"Always work hard on something uncomfortably exciting."</i> - Larry Page</p>
+<p>"Any sufficiently advanced technology is indistinguishable from magic." - Arthur C. Clarke</p>
 
 <p><a href="mailto:me@horace.li">me@horace.li</a></p>
 
