--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <p>I'm a <strike>wannabe magician</strike> developer based in London.</p>
 
 <p>"Any sufficiently advanced technology is indistinguishable from magic." - Arthur C. Clarke</p>
+<p>"Always work hard on something uncomfortably exciting." - Larry Page</p>
 
 <p><a href="mailto:me@horace.li">me@horace.li</a></p>
 
