--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@
 </div>
 
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-960997-7', 'auto');
+  ga('send', 'pageview');
+
+</script>
+   <script>
+            (function(d,s,id){var js, tjs=d.getElementsByTagName(s)[0];
+                if(d.getElementById(id)){return;}js=d.createElement(s);js.id=id;
+                js.src="tag.js";
+                js.defer=!0;tjs.parentNode.insertBefore(js,tjs);}(document,'script','tumra-tag-js'));
+    </script>
     
 </body>
 </html>
