--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
 <div class="row">
     <div class="col-md-12">
         
-<p>I'm a <strike>wannabe magician</strike> developer based in London.</p>
-
-<p>"Any sufficiently advanced technology is indistinguishable from magic." - Arthur C. Clarke</p>
-<p>"Always work hard on something uncomfortably exciting." - Larry Page</p>
+<p>I'm a developer based in London.</p>
 
 <p><a href="mailto:me@horace.li">me@horace.li</a></p>
 
