--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="row">
     <div class="col-md-12">
         
-<p>I'm a developer based in London.</p>
+<p>I'm a developer. I build things.</p>
 
 <p><a href="mailto:me@horace.li">me@horace.li</a></p>
 
