--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 <div class="row">
     <div class="col-md-12">
         
-<p>I'm a developer. I build things.</p>
+        
+<blockquote>The goal of software is to sustainably minimize lead time to positive business impact</blockquote>
+
+<p>I'm a developer. I build software.</p>
 
 <p><a href="mailto:me@horace.li">me@horace.li</a></p>
 
