--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="col-md-12">
         
         
-<blockquote>The goal of software is to sustainably minimize lead time to positive business impact</blockquote>
+<p><blockquote>The goal of software is to sustainably minimize lead time to positive business impact</blockquote></p>
 
 <p>I'm a developer. I build software.</p>
 
