--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
 <div class="row">
     <div class="col-md-12">
         
-        
-<p><blockquote>The goal of software is to sustainably minimize lead time to positive business impact</blockquote></p>
-
-<p>I'm a developer. I build software.</p>
+<p>I write code to solve problems.</p>
 
 <p><a href="mailto:me@horace.li">me@horace.li</a></p>
 
