--- a/index.html
+++ b/index.html
@@ -1,61 +1,40 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>About</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-</head>
-
-<body>
-<div class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Horace Li</a>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="About Horace Li">
+        <meta name="author" content="Horace Li">
+        <title>Horace Li</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    </head>
+    <body>
+        <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse" style="margin-bottom: 2rem">
+            <div class="container">
+                <a class="navbar-brand" href="#">Horace Li</a>
+            </div>
+        </nav>
+        <div class="container">
+            <div class="jumbotron" style="text-align: center">
+                <h1 class="display-3">Horace Li</h1>
+                <p class="lead">I write code to solve problems.</p>
+                <p>
+                    <a class="btn btn-lg btn-link" href="mailto:me@horace.li" role="button">me@horace.li</a>
+                    <a class="btn btn-lg btn-link" href="https://www.dropbox.com/s/q0z69k3dgljhpu0/CV.docx?dl=0" role="button">CV</a>
+                </p>
+                <p>
+                    <a href="https://www.linkedin.com/in/HoraceL/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
+                    <a href="https://github.com/horaceli/"><i class="fa fa-fw fa-2x fa-github"></i></a>
+                    <a href="https://instagram.com/apfel912/"><i class="fa fa-fw fa-2x fa-instagram"></i></a>
+                    <a href="https://twitter.com/horaceli/"><i class="fa fa-fw fa-2x fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/horaceli"><i class="fa fa-fw fa-2x fa-facebook"></i></a>
+                    <a href="https://plus.google.com/+HoraceLi/"><i class="fa fa-fw fa-2x fa-google-plus"></i></a>
+                </p>
+            </div>
+            <hr>
         </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="content row">
-        <main class="col-md-9">
-<div class="page-header">
-    <h1>Horace Li</h1>
-</div>
-
-<div class="row">
-    <div class="col-md-12">
-        
-<p>I write code to solve problems.</p>
-
-<p><a href="mailto:me@horace.li">me@horace.li</a></p>
-
-<p><a href="https://www.dropbox.com/s/q0z69k3dgljhpu0/CV.docx?dl=0">CV</a></p>
-
-    </div>
-</div>
-        </main>
-        <aside class="col-md-3">         
-            <section>
-                <a href="https://www.linkedin.com/in/HoraceL/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
-                <a href="https://github.com/horaceli/"><i class="fa fa-fw fa-2x fa-github"></i></a>
-                <a href="https://instagram.com/apfel912/"><i class="fa fa-fw fa-2x fa-instagram"></i></a>
-                <a href="https://twitter.com/horaceli/"><i class="fa fa-fw fa-2x fa-twitter"></i></a>
-                <a href="https://www.facebook.com/horaceli"><i class="fa fa-fw fa-2x fa-facebook"></i></a>
-                <a href="https://plus.google.com/+HoraceLi/"><i class="fa fa-fw fa-2x fa-google-plus"></i></a>
-            </section>
-        </aside>
-    </div>
-    <hr>
-</div>
-<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    </body>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -64,17 +43,5 @@
 
   ga('create', 'UA-960997-7', 'auto');
   ga('send', 'pageview');
-
 </script>
-    <!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-KRJV2R"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KRJV2R');</script>
-<!-- End Google Tag Manager -->
-    
-</body>
 </html>
