--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="About Horace Li">
+        <meta name="description" content="Horace Li - Software Engineer | I develop software to solve problems.">
         <meta name="author" content="Horace Li">
         <title>Horace Li</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -12,16 +12,16 @@
     <body>
         <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse" style="margin-bottom: 2rem">
             <div class="container">
-                <a class="navbar-brand" href="#">Horace Li</a>
+                <span class="navbar-brand">Horace.Li</span>
             </div>
         </nav>
         <div class="container">
             <div class="jumbotron" style="text-align: center">
                 <h1 class="display-3">Horace Li</h1>
-                <p class="lead">I write code to solve problems.</p>
+                <p class="lead">I develop software to solve problems.</p>
                 <p>
-                    <a class="btn btn-lg btn-link" href="mailto:me@horace.li" role="button">me@horace.li</a>
-                    <a class="btn btn-lg btn-link" href="https://www.dropbox.com/s/q0z69k3dgljhpu0/CV.docx?dl=0" role="button">CV</a>
+                    <a class="btn btn-lg btn-link" href="mailto:me@horace.li">me@horace.li</a>
+                    <a class="btn btn-lg btn-link" href="https://www.dropbox.com/s/q0z69k3dgljhpu0/CV.docx?dl=0">CV</a>
                 </p>
                 <p>
                     <a href="https://www.linkedin.com/in/HoraceL/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
@@ -35,13 +35,12 @@
             <hr>
         </div>
     </body>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-960997-7', 'auto');
-  ga('send', 'pageview');
-</script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-960997-7', 'auto');
+        ga('send', 'pageview');
+    </script>
 </html>
