--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="jumbotron" style="text-align: center">
                 <h1 class="display-3">Horace Li</h1>
-                <p class="lead">I code;</p>
+                <p class="lead">Software Developer</p>
                 <p>
                     <a class="btn btn-lg btn-link" href="mailto:me@horace.li">me@horace.li</a>
                     <a class="btn btn-lg btn-link" href="https://www.dropbox.com/s/q0z69k3dgljhpu0/CV.docx?dl=0">CV</a>
