--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1 class="display-3">Horace Li</h1>
                 <p class="lead">Software Developer</p>
                 <p>
-                    <a class="btn btn-lg btn-link" href="mailto:me@horace.li">me@horace.li</a>
+                    <a class="btn btn-lg btn-link" href="mailto:hl@horace.li">hl@horace.li</a>
                     <a class="btn btn-lg btn-link" href="https://www.dropbox.com/s/q0z69k3dgljhpu0/CV.docx?dl=0">CV</a>
                 </p>
                 <p>
