--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse" style="margin-bottom: 2rem">
             <div class="container">
-                <span class="navbar-brand">Horace.Li</span>
+                <span class="navbar-brand">Horace Li</span>
             </div>
         </nav>
         <div class="container">
@@ -21,7 +21,7 @@
                 <p class="lead">Software Developer</p>
                 <p>
                     <a class="btn btn-lg btn-link" href="mailto:hl@horace.li">hl@horace.li</a>
-                    <a class="btn btn-lg btn-link" href="https://www.dropbox.com/s/q0z69k3dgljhpu0/CV.docx?dl=0">CV</a>
+                    <a class="btn btn-lg btn-link" href="https://docs.google.com/document/d/1I3AXlqM5hymZ4y1kP9p9GJDtxAsQDIzn-YGrIExCAVk">CV</a>
                 </p>
                 <p>
                     <a href="https://www.linkedin.com/in/HoraceL/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
