bootstrap 4-alpha.6 -> 4-beta.2

--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Horace Li - Software Engineer | I develop software to solve problems.">
+        <meta name="description" content="Horace Li - Software Developer">
         <meta name="author" content="Horace Li">
         <title>Horace Li</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
-        <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse" style="margin-bottom: 2rem">
+        <nav class="navbar navbar-dark bg-dark" style="margin-bottom: 2rem">
             <div class="container">
                 <span class="navbar-brand">Horace Li</span>
             </div>
         </nav>
         <div class="container">
-            <div class="jumbotron" style="text-align: center">
+            <div class="jumbotron text-center">
                 <h1 class="display-3">Horace Li</h1>
                 <p class="lead">Software Developer</p>
                 <p>
                     <a class="btn btn-lg btn-link" href="mailto:hl@horace.li">hl@horace.li</a>
-                    <a class="btn btn-lg btn-link" href="https://docs.google.com/document/d/1I3AXlqM5hymZ4y1kP9p9GJDtxAsQDIzn-YGrIExCAVk">CV</a>
+                    <a class="btn btn-lg btn-link" href="cv.html">CV</a>
                 </p>
                 <p>
                     <a href="https://www.linkedin.com/in/HoraceL/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
