--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p class="lead">Software Developer</p>
                 <p>
                     <a class="btn btn-lg btn-link" href="mailto:hl@horace.li">hl@horace.li</a>
-                    <a class="btn btn-lg btn-link" href="cv.html">CV</a>
+                    <a class="btn btn-lg btn-link" href="cv">CV</a>
                 </p>
                 <p>
                     <a href="https://www.linkedin.com/in/HoraceL/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
