--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Horace Li - Software Developer">
+        <meta name="description" content="Horace Li - Software Engineer">
         <meta name="author" content="Horace Li">
         <title>Horace Li</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="jumbotron text-center">
                 <h1 class="display-3">Horace Li</h1>
-                <p class="lead">Software Developer</p>
+                <p class="lead">Software Engineer</p>
                 <p>
                     <a class="btn btn-lg btn-link" href="mailto:hl@horace.li">hl@horace.li</a>
                     <a class="btn btn-lg btn-link" href="cv">CV</a>
