--- a/index.html
+++ b/index.html
@@ -6,29 +6,24 @@
         <meta name="description" content="Horace Li - Software Engineer">
         <meta name="author" content="Horace Li">
         <title>Horace Li</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha256-YLGeXaapI0/5IgZopewRJcFXomhRMlYYjugPLSyNjTY=" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/brands.css" integrity="sha256-Wf+dSmrzzygCLHKeAxsTq1WZE/Z1ZdnqjqySz2sE+oE=" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css" integrity="sha384-vd1e11sR28tEK9YANUtpIOdjGW14pS87bUBuOIoBILVWLFnS+MCX9T6MMf0VdPGq" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-dark bg-dark" style="margin-bottom: 2rem">
-            <div class="container">
-                <span class="navbar-brand">Horace Li</span>
-            </div>
-        </nav>
         <div class="container">
-            <div class="jumbotron text-center">
+            <div class="jumbotron text-center mt-5">
                 <h1 class="display-3">Horace Li</h1>
-                <p class="lead">Software Engineer</p>
+                <h2 class="lead">Software Engineer</h2>
                 <p>
                     <a class="btn btn-lg btn-link" href="mailto:hl@horace.li">hl@horace.li</a>
                     <a class="btn btn-lg btn-link" href="cv">CV</a>
                 </p>
                 <p>
-                    <a href="https://www.linkedin.com/in/HoraceL/"><i class="fa fa-fw fa-2x fa-linkedin"></i></a>
-                    <a href="https://github.com/horaceli/"><i class="fa fa-fw fa-2x fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/HoraceL/"><i class="fab fa-fw fa-2x fa-linkedin"></i></a>
+                    <a href="https://github.com/horaceli/"><i class="fab fa-fw fa-2x fa-github"></i></a>
                 </p>
             </div>
-            <hr>
         </div>
     </body>
 </html>
